# zephyr_module_hisilicon

./: .gitignore  CMakeLists.txt  Kconfig
hi3861/: CMakeLists.txt
hi3861/boot/: .clang-format  CMakeLists.txt  sign_bin.py
hi3861/boot/commonboot/: hi_boot_err.h
hi3861/boot/flashboot/: CMakeLists.txt  Makefile  SConscript  module_config.mk
hi3861/boot/flashboot/common/nvm/: hi_nvm.c  hi_nvm.h
hi3861/boot/flashboot/common/partition_table/: boot_partition_table.c
hi3861/boot/flashboot/drivers/efuse/: efuse_drv.h
hi3861/boot/flashboot/drivers/flash/: hi_flashboot_flash.c
hi3861/boot/flashboot/drivers/lsadc/: adc_drv.c
hi3861/boot/flashboot/include/: hi_boot_rom.h  hi_flashboot.h  hi_flashboot_gpio.h  lzmaram.h
hi3861/boot/flashboot/startup/: main.h  riscv_init.S
hi3861/boot/flashboot/upg/: boot_upg_check.c  boot_upg_check.h  boot_upg_check_secure.c  boot_upg_check_secure.h  boot_upg_common.c  boot_upg_common.h  boot_upg_kernel.h  boot_upg_start_up.c  boot_upg_tool.c  boot_upg_tool.h
hi3861/boot/loaderboot/: CMakeLists.txt  SConscript  module_config.mk
hi3861/boot/loaderboot/common/: cmd_loop.c  transfer.c
hi3861/boot/loaderboot/drivers/flash/: hi_loaderboot_flash.c
hi3861/boot/loaderboot/drivers/lsadc/: adc_drv.c
hi3861/boot/loaderboot/fixed/include/: ymodem.h
hi3861/boot/loaderboot/include/: crc.h  hi_boot_rom.h
hi3861/boot/loaderboot/startup/: main.h  riscv_init.S  stack_protect.c
hi3861/include/hisilicon/hi3861/: gpio.h  timer.h
hi3861/loaderboot/: CMakeLists.txt  loaderboot_sha256.lds
hi3861/loaderboot/common/: transfer.c
hi3861/loaderboot/startup/: riscv_init_loaderboot.S
include/zephyr/dt-bindings/pinctrl/: hi3861-pinctrl-common.h  hi3861-pinctrl.h
pinconfigs/: hi3861.yml
scripts/: gen-pinctrl.py
zephyr/: module.yml
